# memory-forensic

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ralph-progress.json  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  TDD_AUDIT.md  clippy.toml  crates.js  help.html  index.html  mkdocs.yml  release-plz.toml  settings.html  src-files.js
.claude/: ralph-loop.local.md
crates/forensic-hashdb/: Cargo.toml
crates/forensic-hashdb/src/: known_bad.rs  known_good.rs  lib.rs  lol_drivers.rs  types.rs
crates/memf-carve/: CHANGELOG.md  Cargo.toml
crates/memf-carve/src/: attribution.rs  driver.rs  dump.rs  lib.rs  region_source.rs
crates/memf-core/: Cargo.toml
crates/memf-core/src/: framebuffer.rs  lib.rs  lzo.rs  object_reader.rs  pagefile.rs  proto_pte.rs  test_builders.rs  vas.rs
crates/memf-correlate/: Cargo.toml
crates/memf-correlate/src/: event.rs  lib.rs  mitre.rs  process_tree.rs  scoring.rs  timeline.rs  traits.rs
crates/memf-dpapi/: Cargo.toml
crates/memf-dpapi/src/: chrome.rs  decrypt.rs  dpapi_blob.rs
crates/memf-format/: CHANGELOG.md  Cargo.toml
crates/memf-format/src/: avml.rs  elf_core.rs  hiberfil.rs  kdump.rs  lib.rs  lime.rs  raw.rs  test_builders.rs  vmware.rs  win_crashdump.rs
crates/memf-linux/: Cargo.toml
crates/memf-linux/src/: arp.rs  bash.rs  bash_history.rs  boot_time.rs  bpf.rs  capabilities.rs  cgroups.rs  check_afinfo.rs  check_creds.rs  check_fops.rs  check_hooks.rs  check_idt.rs  check_modules.rs  cmdline.rs  container_escape.rs  correlate.rs  cpu_pinning.rs  crontab.rs  deleted_exe.rs  dentry_cache.rs  dmesg.rs  ebpf_progs.rs  elf_analysis.rs  elfinfo.rs  envvars.rs  files.rs  framebuffer.rs  fs.rs  ftrace.rs  fuse_abuse.rs  futex_forensics.rs  heuristics.rs  io_uring.rs  iomem.rs  ipc.rs  kaslr.rs  kernel_timers.rs  keyboard_notifiers.rs  kmsg.rs  kthread.rs  (+42 more)
crates/memf-session/: Cargo.toml
crates/memf-session/src/: lib.rs
crates/memf-session/tests/: bootstrap.rs
crates/memf-strings/: Cargo.toml
crates/memf-strings/src/: classify.rs  extract.rs  from_file.rs  lib.rs  regex_classifier.rs  yara_classifier.rs  yara_scanner.rs
crates/memf-symbols/: Cargo.toml
crates/memf-symbols/examples/: probe_dtb.rs  probe_lowstub.rs
crates/memf-symbols/src/: auto_profile.rs  btf.rs  isf.rs  kernel_scanner.rs  lib.rs  pdb_resolver.rs  pe_debug.rs  symserver.rs  test_builders.rs
crates/memf-windows/: Cargo.toml
crates/memf-windows/src/: alpc.rs  amcache.rs  amsi_bypass.rs  apc_injection.rs  atom_table.rs  bigpools.rs  bitlocker_keys.rs  browser_cookies.rs  browser_credentials.rs  browser_sessions.rs  cachedump.rs  callbacks.rs  clipboard.rs  cloud_credentials.rs  clr_heap.rs  cmdline.rs  com_hijacking.rs  consoles.rs  correlate.rs  crashinfo.rs  credman.rs  debug_registers.rs  desktops.rs  device_tree.rs  direct_syscalls.rs  dkom_detect.rs  dll.rs  dns_cache.rs  dpapi_keys.rs  driver.rs  driver_irp.rs  dse_bypass.rs  envvars.rs  etw.rs  etw_patch.rs  evtx.rs  fiber_fls.rs  filescan.rs  firefox_credentials.rs  framebuffer.rs  (+69 more)
crates/memf-windows/src/dpapi/: chrome.rs  decrypt.rs  dpapi_blob.rs  mod.rs
crates/memf-windows/tests/: hive_reader_dual_backend.rs
docs/: PRD.md  README.md  correctness-audit-2026-06-23.md  index.md  privacy.md  steelman-vs-reference-tools.md  terms.md  validation.md
forensic_hashdb/: all.html  enum.BadFileSource.html  index.html  sidebar-items.js  struct.BadFileInfo.html  struct.DriverInfo.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_crashdump.rs  fuzz_hiberfil.rs  fuzz_kdump.rs  fuzz_lime.rs
memf/: all.html  constant.BOOT_TIME_DRIFT_WARN.html  constant.FILETIME_UNIX_DIFF.html  constant.KERNEL_PDB_PREFIXES.html  constant.MZ_MAGIC.html  constant.PE_PROBE_SIZE.html  constant.WIN_NON_NETWORKING.html  constant.WIN_PARENT_RULES.html  constant.WIN_SINGLETONS.html  enum.Commands.html  enum.OutputFormat.html  enum.PsSortField.html  enum.VolRenderer.html  fn.build_linux_bash_events.html  fn.build_linux_timeline.html  fn.build_windows_dll_events.html  fn.build_windows_thread_events.html  fn.build_windows_timeline.html  fn.cmd_browser_cookies.html  fn.cmd_browser_creds.html  fn.cmd_browser_sessions.html  fn.cmd_check.html  fn.cmd_framebuffer.html  fn.cmd_handles.html  fn.cmd_info.html  fn.cmd_net.html  fn.cmd_procdump.html  fn.cmd_ps.html  fn.cmd_read_phys.html  fn.cmd_read_virt.html  fn.cmd_strings.html  fn.cmd_system.html  fn.cmd_timeline.html  fn.cmd_translate_va.html  fn.cmd_yara.html  fn.collect_suspicious_pid_sets.html  fn.days_to_ymd.html  fn.dump_process_memory.html  fn.filetime_to_unix.html  fn.find_kernel_pdb_in_physmem.html  (+119 more)
memf_core/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.WalkResult.html  type.Result.html
memf_correlate/: all.html  index.html  sidebar-items.js
memf_format/: all.html  enum.Error.html  enum.MachineType.html  fn.open_dump.html  fn.open_dump_inner.html  fn.open_dump_with_raw_fallback.html  index.html  sidebar-items.js  struct.DumpMetadata.html  struct.PhysicalRange.html  trait.FormatPlugin.html  trait.PhysicalMemoryProvider.html  type.Result.html
memf_linux/: all.html  enum.Error.html  index.html  sidebar-items.js  trait.WalkerPlugin.html  type.Result.html
memf_strings/: all.html  enum.Error.html  enum.StringCategory.html  enum.StringEncoding.html  index.html  sidebar-items.js  struct.ClassifiedString.html  type.Result.html
memf_symbols/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.FieldInfo.html  struct.RebasedResolver.html  struct.StructInfo.html  trait.SymbolResolver.html  type.Result.html
python/volatility3-memf/: .gitignore  pyproject.toml
python/volatility3-memf/src/volatility3_memf/: __init__.py  data_layer.py  physical_layer.py  virtual_layer.py
python/volatility3-memf/src/volatility3_memf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/volatility3-memf/tests/: _catalogue.py  _helpers.py  conftest.py  test_data_layer.py  test_physical_layer.py  test_robustness.py  test_virtual_layer.py  test_vol3_compat.py  test_vol3_comprehensive.py  test_vol3_plugin_robustness.py
src/: main.rs  (+4 more)
(+3225 files in other folders)
