[workspace]
resolver = "2"
members = [
    "crates/memf-format",
    "crates/memf-strings",
    "crates/memf-symbols",
    "crates/memf-core",
    "crates/memf-linux",
    "crates/memf-windows",
    "crates/forensic-hashdb",
    "crates/memf-correlate",
    "crates/memf-framebuffer",
    "crates/memf-dpapi",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/memory-forensic"

[workspace.dependencies]
forensicnomicon = { path = "../forensicnomicon" }
winevt-core = { path = "../winevt-forensic/crates/winevt-core" }
forensic-hashdb = { path = "crates/forensic-hashdb" }
memf-format  = { path = "crates/memf-format" }
memf-strings = { path = "crates/memf-strings" }
memf-symbols = { path = "crates/memf-symbols" }
memf-core    = { path = "crates/memf-core" }
memf-linux   = { path = "crates/memf-linux" }
memf-windows = { path = "crates/memf-windows" }
memf-correlate    = { path = "crates/memf-correlate" }
memf-framebuffer  = { path = "crates/memf-framebuffer" }
memf-dpapi        = { path = "crates/memf-dpapi" }
assert_cmd = "2"
aes            = "0.8"
aes-gcm        = "0.10"
aho-corasick = "1"
anyhow = "1"
block-padding  = "0.3"
bzip2 = "0.6"
bytemuck = { version = "1", features = ["derive"] }
cbc            = { version = "0.1", features = ["alloc"] }
cipher         = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
des            = "0.8"
digest         = "0.10"
flate2 = { version = "1", default-features = false, features = ["miniz_oxide"] }
goblin = "0.9"
hmac           = "0.12"
indicatif = "0.17"
inventory = "0.3"
lru = "0.16"
lzo1x = "0.2"
md-5           = "0.10"
memmap2 = "0.9"
pbkdf2         = "0.12"
pdb = "0.8"
png            = "0.17"
regex = "1"
rust-lzxpress = "0.7"
ruzstd = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust = "0.6"
sha1           = { version = "0.10", features = ["oid"] }
sha2           = "0.10"
snap = "1"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "3"
yara-x = "0.12"
zip = { version = "2", default-features = false, features = ["deflate", "deflate64", "bzip2", "zstd"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
unnecessary_literal_bound = "allow"
return_self_not_must_use = "allow"
unreadable_literal = "allow"
type_complexity = "allow"
similar_names = "allow"

[package]
name = "memf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "memf"
path = "src/main.rs"

[dependencies]
memf-format.workspace = true
memf-strings.workspace = true
memf-symbols.workspace = true
memf-core.workspace = true
memf-linux.workspace = true
memf-windows.workspace = true
memf-framebuffer.workspace = true
anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
sevenz-rust.workspace = true
indicatif.workspace = true
tar.workspace = true
flate2.workspace = true
bzip2.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
serde_json.workspace = true
predicates = "3"
tempfile.workspace = true

[lints]
workspace = true
