[workspace]
resolver = "2"
members = [
    "crates/memf-format",
    "crates/memf-strings",
    "crates/memf-symbols",
    "crates/memf-core",
    "crates/memf-linux",
    "crates/memf-windows",
    "crates/forensic-hashdb",
    "crates/memf-correlate",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/memory-forensic"

[workspace.dependencies]
forensicnomicon = { version = "0.10", features = ["std", "serde"] }
winreg-core = "0.1.1"
winreg-format = "0.1"
jsonguard = { version = "0.2.3", features = ["std", "serde"] }
# winevt-core is now published — use the registry (drops the cross-repo path).
winevt-core = "0.2"
shellitem = "0.1"
# SCCA prefetch (.pf) reader — MAM/Xpress-Huffman + SCCA v30/31; memf delegates
# its in-memory prefetch carve to this fleet crate.
prefetch-core = "0.1"
# Internal (version + path: path drives local dev, version is used on publish).
forensic-hashdb = { version = "0.1.0", path = "crates/forensic-hashdb" }
memf-format  = { version = "0.2.1", path = "crates/memf-format" }
memf-strings = { version = "0.2.1", path = "crates/memf-strings" }
memf-symbols = { version = "0.2.1", path = "crates/memf-symbols" }
memf-core    = { version = "0.2.1", path = "crates/memf-core" }
memf-linux   = { version = "0.2.1", path = "crates/memf-linux" }
memf-windows = { version = "0.2.1", path = "crates/memf-windows" }
memf-correlate    = { version = "0.2.1", path = "crates/memf-correlate" }
assert_cmd = "2"
aes            = "0.8"
aes-gcm        = "0.10"
aho-corasick = "1"
anyhow = "1"
block-padding  = "0.3"
bzip2 = "0.6"
bytemuck = { version = "1", features = ["derive"] }
cbc            = { version = "0.1", features = ["alloc"] }
cipher         = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
des            = "0.8"
digest         = "0.10"
flate2 = { version = "1", default-features = false, features = ["miniz_oxide"] }
goblin = "0.9"
hmac           = "0.12"
indicatif = "0.17"
inventory = "0.3"
lru = "0.16"
# Production decode path: our own decode-only LZO1X crate (Apache-2.0).
lzo = "0.1"
# lzo1x is GPL-2.0 — kept ONLY as a memf-core dev-dependency (round-trip oracle).
lzo1x = "0.2"
md-5           = "0.10"
memmap2 = "0.9"
pbkdf2         = "0.12"
pdb = "0.8"
png            = "0.17"
rc4            = "0.2"
regex = "1"
rust-lzxpress = "0.7"
ruzstd = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust = "0.6"
sha1           = { version = "0.10", features = ["oid"] }
sha2           = "0.10"
snap = "1"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lzma-rs = "0.3"
ureq = "3"
yara-x = "0.12"
zip = { version = "2", default-features = false, features = ["deflate", "deflate64", "bzip2", "zstd"] }

# unsafe is denied workspace-wide, not forbidden: a handful of crates legitimately
# need one bounded mmap site (memf-core::pagefile, forensic-hashdb::known_good).
# Those sites carry a justified `#[allow(unsafe_code)]`; every other `unsafe` stays
# a hard error. `deny` (not `forbid`) is what makes the local override possible.
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# Panic-free: memory dumps are untrusted, attacker-controllable input (Paranoid Gatekeeper).
unwrap_used = { level = "deny", priority = 0 }
expect_used = { level = "deny", priority = 0 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
unnecessary_literal_bound = { level = "allow", priority = 1 }
return_self_not_must_use = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }

[package]
name = "memf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "memf"
path = "src/main.rs"

[dependencies]
memf-format.workspace = true
memf-strings.workspace = true
memf-symbols.workspace = true
memf-core.workspace = true
memf-linux.workspace = true
memf-windows.workspace = true
anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
sevenz-rust.workspace = true
indicatif.workspace = true
tar.workspace = true
flate2.workspace = true
bzip2.workspace = true
lzma-rs.workspace = true
ureq.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
forensicnomicon.workspace = true
jsonguard.workspace = true
yara-x.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
serde_json.workspace = true
predicates = "3"
tempfile.workspace = true

[lints]
workspace = true
