[package]
name = "memf-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
memf-format = { path = "../crates/memf-format" }

[[bin]]
name = "fuzz_crashdump"
path = "fuzz_targets/fuzz_crashdump.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hiberfil"
path = "fuzz_targets/fuzz_hiberfil.rs"
test = false
doc = false

[[bin]]
name = "fuzz_kdump"
path = "fuzz_targets/fuzz_kdump.rs"
test = false
doc = false

[[bin]]
name = "fuzz_lime"
path = "fuzz_targets/fuzz_lime.rs"
test = false
doc = false
