[package]
name = "forensic-hashdb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "File hash databases for digital forensics — NSRL/CIRCL known-good, malware known-bad, and known-vulnerable Windows drivers (loldrivers)."

[dependencies]
memmap2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
