[package]
name = "memf-carve"
version = "0.1.0"
description = "Plane-V memory artifact carving: per-process virtual-address-space carving over the forensic-carve sweep engine (memory medium of the fleet carving contract)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
# Cannot publish until `forensic-carve` is on crates.io: it is currently an
# unpublished path dependency. Flip to publishable (and switch the dep to the
# registry version) once forensic-carve publishes.
publish = false

[dependencies]
memf-core.workspace = true
memf-windows.workspace = true
memf-format.workspace = true
forensic-carve.workspace = true

[dev-dependencies]
memf-symbols.workspace = true

[lints]
workspace = true
