[package]
name = "memf-core"
version = "0.1.0"
description = "Virtual address translation and kernel object reading for memory forensics"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
memf-format.workspace = true
memf-symbols.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
memmap2.workspace = true
rust-lzxpress.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
