[package]
name = "memf-correlate"
version = "0.2.3"
description = "Forensic event correlation model for the memf forensics framework"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
forensicnomicon.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror.workspace = true
chrono = { workspace = true }

[lints]
workspace = true
