[package]
name = "memf-linux"
version = "0.1.0"
description = "Linux kernel memory forensic walkers (processes, connections, modules)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
memf-format.workspace = true
memf-symbols.workspace = true
memf-core.workspace = true
thiserror.workspace = true
inventory.workspace = true

[lints]
workspace = true
