[package]
name = "memf-strings"
version = "0.1.0"
description = "String extraction, classification, and YARA-X scanning for memory forensics"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
memf-format.workspace = true
thiserror.workspace = true
inventory.workspace = true
regex.workspace = true
aho-corasick.workspace = true
yara-x.workspace = true

[lints]
workspace = true
