[package]
name = "memf-symbols"
version = "0.1.0"
description = "Symbol resolution backends for memory forensics (ISF JSON, BTF)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
pdb.workspace = true
goblin.workspace = true

[lints]
workspace = true
