[package]
name = "memf-symbols"
version = "0.2.1"
description = "Symbol resolution backends for memory forensics (ISF JSON, BTF)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
pdb.workspace = true
goblin.workspace = true
ureq = { workspace = true }
memf-format = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
