[package]
name = "memf-windows"
version = "0.1.0"
description = "Windows kernel memory forensic walkers (processes, threads, drivers, DLLs)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
memf-format.workspace = true
memf-symbols.workspace = true
memf-core.workspace = true
memf-correlate.workspace = true
memf-dpapi.workspace = true
forensicnomicon.workspace = true
winevt-core.workspace = true
memf-framebuffer.workspace = true
serde.workspace = true
thiserror.workspace = true
regex.workspace = true
goblin = { workspace = true }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
