[package]
name = "memf-windows"
version = "0.1.0"
description = "Windows kernel memory forensic walkers (processes, threads, drivers, DLLs)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
cbc.workspace = true
des.workspace = true
sha1.workspace = true
sha2.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
digest.workspace = true
cipher.workspace = true
memf-format.workspace = true
memf-symbols.workspace = true
memf-core.workspace = true
memf-correlate.workspace = true
forensicnomicon.workspace = true
winevt-core.workspace = true
serde.workspace = true
thiserror.workspace = true
regex.workspace = true
goblin = { workspace = true }
yara-x.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
