[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "volatility3-memf"
version = "0.1.0"
description = "Volatility 3 memory layer adapter backed by the memf CLI"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: requires real dump + memf binary (skipped in CI without them)",
    "robustness: requires real memf binary + writes temp files",
]
